# lab_sfi_dml_v3

./: .gitignore  README.md  pyproject.toml  setup.py
script/preprocessing/: collect_c4.sh  collect_framenet.sh  preprocess_c4.sh  preprocess_framenet.sh
script/preprocessing_framenet/: apply_stanza.sh  make_exemplars.sh
script/verb_clustering/: aggregate_scores-clustering.sh  aggregate_scores-ours.sh  aggregate_scores-previous.sh  aggregate_scores-ranking.sh  evaluate_clustering-onestep.sh  evaluate_clustering-ours.sh  evaluate_clustering-previous.sh  evaluate_clustering-twostep.sh  evaluate_ranking-onestep.sh  evaluate_ranking-twostep.sh  find_best_params-onestep_multi_runs.sh  find_best_params-onestep_single_run.sh  find_best_params-twostep_multi_runs.sh  find_best_params-twostep_single_run.sh  find_best_params_clustering-onestep.sh  find_best_params_clustering-onestep_multi_runs.sh  find_best_params_clustering-onestep_single_run.sh  find_best_params_clustering-twostep.sh  find_best_params_clustering-twostep_multi_runs.sh  find_best_params_clustering-twostep_single_run.sh  find_best_params_ranking.sh  get_embedding.sh  make_dataset.sh  perform_clustering-onestep.sh  perform_clustering-twostep.sh  perform_previous_clustering-anwar.sh  perform_previous_clustering-arefyev.sh  (+15 more)
tmp/: make_dataset.py  nltk_test.ipynb  stanza_test.ipynb  test.ipynb
viewdata/: aggregate_score.ipynb  aggregate_score.py  c4.py  cluster.ipynb  cluster.py  dataset.ipynb  framenet.ipynb  framenet.py  lu_classifier.ipynb  lu_classifier.py  lu_classifier_dataset.ipynb  model_compare.ipynb
(+96 files in other folders)
