[project]
name = "sfi-dml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "faiss-cpu>=1.9.0.post1",
    "fastcluster>=1.2.6",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "numpy<2",
    "pandas>=2.2.3",
    "pyclustering>=0.10.1.2",
    "pydantic>=2.10.4",
    "pytokenizations>=0.8.4",
    "ruamel-yaml>=0.18.6",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "seqeval>=1.2.2",
    "spacy-alignments>=0.9.1",
    "stanza>=1.10.1",
    "tabulate>=0.9.0",
    "timeout-decorator>=0.5.0",
    "transformers>=4.47.1",
]

[dependency-groups]
dev = [
    "sfi-dml",
]

[tool.uv.sources]
sfi-dml = { workspace = true }
